Backport Sky's Grass Slabs to Minecraft 1.10.2